Исправление предложенных изменений + оптимизация